--- a/English.lproj/localizable.strings
+++ b/English.lproj/localizable.strings
@@ -1,4 +1,4 @@
 {
-    QuickFileType = QuickFileType; 
     "http://homepage.mac.com/tkurita/scriptfactory/donationproxy.html" = "http://homepage.mac.com/tkurita/scriptfactory/donationproxy.html"; 
+    "this software" = QuickFileType; 
 }
