[QuickFileType] creator and type が変更できない時にエラーを表示するようにした。

--- a/History.txt
+++ b/History.txt
@@ -1,6 +1,5 @@
 = To do
 
-
 == その他
 * typeTemplate ではなく favorites という言葉を使うようにしよう。
 * Tool Tips を設定する
@@ -15,6 +14,26 @@
 	を作っても効果はなかった
 	
 * MCTWindow のファイルテーブルにdrag&drop を受け付けるようにする。
+
+=2007-03-09
+変更できないときの警告メッセージをシート終了
+
+= 2007-03-08
+変更できない理由を調べるところまでは終わった。
+警告メッセージをシートで出す。
+変更的ないときは window を閉じない。
+複数のファイルの場合のときはどうする？
+	* 変更できない物だけリストにのこす。
+
+permission, lock status を確認してから変更する。
+単にエラーメッセージを表示するだけでもいいかも
+
+permissin を FileAttribute だけから調べるのは簡単ではない。
+access を使うのが一番簡単？
+autorization API を使えないか？
+	調べるだけというサンプルは見つからない
+	そもそも良く理解できない。
+access を使おう。一番簡単。
 
 = 2007-03-05
 == key view loop がおかしい -- 修正
