[QuickFileType] Improve AppController.m

--- a/History.txt
+++ b/History.txt
@@ -22,6 +22,10 @@
 	
 * MCTWindow のファイルテーブルにdrag&drop を受け付けるようにする。
 
+= 2010-07-20
+すくなくとも、Mac OS X 10.5.8 では、Finder で複数のファイルを選択してサービスメニューを実行しても、複数アイテムが渡されることはない。
+LaunchBar を使えば、複数のファイルをサービスメニューに渡せるので、Finde 固有の問題かも。
+
 = 2009-01-14
 CTDocument の
 
